Fix Dark Mode toggler overlapping, if screen is shrunk

--- a/docs/styles/theme.css
+++ b/docs/styles/theme.css
@@ -87,3 +87,9 @@ div[style="overflow: auto"]{
 .search {
   margin-top: 39px;
 }
+
+@media (max-width: 768px) {
+  .switch {
+    margin-right: 5%;
+  }
+}
